--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -35,7 +35,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664269.md#1" target="_blank">夺命瘟疫黑死病 曾经败在他的手上</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664269.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/dfaf80edff148dd194032e09ac8dc1ed-150x120.jpg" align ="left"></a>黑死病（鼠疫），有人称其“是比军队更可怕的敌人”。曾经肆虐欧洲，夺走了欧洲1/3人口的黑死病，最近惊现北京。已有媒体报导证实，北京多家医院、宾馆工作人员出现疫病感染及疑似病例。然而，中共“维稳”黑死病疫情，对外隐瞒消息，疫情恐怕比想像的还要严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 6:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/9/11/4/n2711277.md#1" target="_blank">母亲的远见：孩子你长大后千万别入党</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/9/11/4/n2711277.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/11/612251329491017-150x120.gif" align ="left"></a>(shown)我母亲一生笃信神佛，与世无争，少言寡语，但却出语不凡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 12:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668405.md#1" target="_blank">天地清明引(114) 明光殒－侯门画风1</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668405.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/7bf80405f1128b66c759925743ea4c8c-150x120.jpg" align ="left"></a>白门柳背着严承义，终于回返光明顶。严承义浑身是伤，白门柳将其慢慢放于榻上。严承义嘴角一开一合之间，吐出几个字：“莲……花……峰……白……云……坛……”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677411.md#1" target="_blank">一七令．和之曲</a><br></h3> 和。 岁月，如歌。 贤儿媳，好婆婆。 妯娌和睦，无风无波。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:25 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671620.md#1" target="_blank">台湾古典诗：桃园市花——桃花（二）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671620.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/11/1401120525271750-150x120.jpg" align ="left"></a>武陵有路指迷津，烂熳成蹊好避秦， 锦浪迎风香十里，绛霞映日醉三春；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 8:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674444.md#1" target="_blank">诗歌：味道</a><br></h3> 细品千年愿，陈香万古禅。 三拍诗酒碗，一串泪珠盘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_5.htm">http://www.epochtimes.com/gb/news2007_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
