--- a/gb/nf3046_5.md
+++ b/gb/nf3046_5.md
@@ -19,6 +19,7 @@
 
 目前，越来越多的国家和地区的政府与人民，开始对中共邪恶本质的觉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月13日 9:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank">明真相后 大陆公检法人员抛弃中共</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/image1-150x120.jpeg" align ="left"></a>在澳洲墨尔本，有这样一个团体，他们平和理性、坚忍善良，用20年的时间反抗嗜虐成性的暴政，这个团体就是法轮功。1999年7月20日，中共发动了对信仰“真、善、忍” 的法轮功修炼者的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月06日 12:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/24/n11405499.md#1" target="_blank">每日三退声明精选（2019/07/23）</a><br></h3>很多人在学校时候受过洗脑，甚至入党都是内部推荐，引以为“荣”，后来步入社会，学会独立思考。越来越觉得以前受之迷惑，但是我相信很多党员都是无辜的，大部分做坏事的都是体制内的人，像我们这些体制外的党员大部分并不坏，更没有做过坏事，甚至很多心存善念，希望迎来民主。也希望你们能为民主事业做更多贡献，早日搞走黑暗和魔鬼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月24日 11:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/22/n11400873.md#1" target="_blank">每日三退声明精选（2019/07/21）</a><br></h3>中共现在把中国搞的乌烟瘴气，贪官遍地，空气污染严重，水质恶化严重，豆腐渣工程，黑心地沟油，毒奶粉，假预苗，有毒食品泛滥，P2P爆雷，现在好多银行都倒闭关门了，中共却还在欺骗我们，中共干的坏事实在是太多太多，把全中国搞的生灵涂炭。我声明退出中共少先队及一切邪恶组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 11:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/21/n11398575.md#1" target="_blank">每日三退声明精选（2019/07/20）</a><br></h3>中共是中国人的敌人，是中国灾难的制造者，没有中共，中国人才有幸福生活！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月21日 10:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/7/20/n11397084.md#1" target="_blank">每日三退声明精选（2019/07/19）</a><br></h3>年幼时，无知的被人拽入了中共的附属组织少先队、共青团。那时在中共的洗脑中，与其同流合污，走了很多弯路。现在倍感耻辱。因为中共的邪恶与狂暴现在暴露无遗。原来它是一个邪教组织。我们原本是善良的，不能与邪恶为伍。我们在此向上天保证，向世人声明：立即退出中共的共青团、少先队等所有相关联的各类组织。我们渴望回归传统，渴望得到老天的指引！请上天作证！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月20日 10:04 AM							</td></tr>
@@ -42,6 +43,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/6/30/n11354808.md#1" target="_blank">每日三退声明精选（2019/06/29）</a><br></h3>中国共产党七十年来杀人无数，文革六四法轮功，新疆的再教育营关押了上百万维吾尔族人，人脸辨视，身份证定位....，想对每个中国人监控，这样的政党想想也够可怕的，什么事做不出来呢？只有在中国的老百姓才受骗，在此声明退出共产党团队，去兽记，和这个双手沾满中国人鲜血的党决裂，永无瓜葛！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月30日 11:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/6/28/n11351193.md#1" target="_blank">每日三退声明精选（2019/06/27）</a><br></h3>共产党在中国专制几十年，战天斗地，运动不断，出卖领土，毁坏山河，败坏道德，生灵涂炭，干尽了坏事。现在无官不贪，大批高官把自己的家眷移民到西方发达国家，在国内成为裸干向国外转移钜资。中共的存在就是中国人贫困的祸根，中共是中国人的灾星，只有大多数中国人明白真相，退出这个邪恶的组织，真正解体中共，人民才会有美好的未来。为此，我声明真正退出早年无知被骗加入过的中国共.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月28日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/6/27/n11348621.md#1" target="_blank">每日三退声明精选（2019/06/26）</a><br></h3>近日，看到700万香港人有200万人上街游行，再一次彻底看清了共产党的流氓本性，共产党的邪恶基因谎言与暴力展现在世人面前，恍惚间好似89年64屠城再现，香港人的和平理性的反抗，再一次折射出共产党的邪恶，一国两制的垮台预示着共产党即将覆灭的快速来临。看过真相小册子和听闻法轮大法真相后，真正的想彻底退出中国共产党的党团队组织，对天发誓，苍天作证，抹去兽印，不做陪.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月27日 10:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/6/26/n11346301.md#1" target="_blank">每日三退声明精选（2019/06/25）</a><br></h3>我受中共蒙蔽多年，参加了其党团队组织，甚至深陷其中，还干过早期六一零最邪恶组织的头目，我通过真相和身边的大法弟子认识到大法对人的教化，法轮大法好！对大法的迫害是万恶的，也开始认识到了中共的邪恶，我对自己曾经做过的坏事表示深刻的悔过，并坚决退出其党团队邪恶组织，与共产党划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月26日 10:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/nf3046_5.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/nf3046_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/nf3046_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_5.htm">http://www.epochtimes.com/gb/nf3046_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
