--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680371.md#1" target="_blank">加拿大留学生：中共政府监控我的活动</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680371.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_1536286934-150x120.jpg" align ="left"></a>一位在加拿大的维吾尔族留学生最近披露，在加拿大生活的维吾尔族人都感受到了来自中共政府的压力，中共用把他们在中国的家人关入再教育营作为威胁，监控他们的行动。一份从中国秘密来源获得的机密文件显示，中共当局正在监视全球的维吾尔族人，并用威胁的手段令其噤声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680345.md#1" target="_blank">终审大法官：香港司法独立受基本法保护</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680345.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301142100411853-150x120.jpg" align ="left"></a>上周，《禁蒙面法》被裁定违背《基本法》后，引起中共反弹。香港终审大法官马道立日前首次对此做出回应。他表示，香港的司法自治得到《基本法》明确保障，任何批评的声音都应以此作为基点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680165.md#1" target="_blank">不满警暴离职 香港警花参选区议会 胜出</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680165.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/cut11-1-150x120.jpg" align ="left"></a>几个月前，香港警花邱汶珊因不满警暴而离开警队。此次在香港区议会选举中，她以政治素人背景参选并胜出。而在“反送中”运动期间被指涉元朗白衣人无差别攻击事件的建制派议员何君尧等人则纷纷落选。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 3:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11685856.md#1" target="_blank">香港观塘市民高呼 “拯救理大 还我校园”</a><br></h3>继26日九龙湾“和你Lunch（午餐）”后，27日（昨日）观塘上班族接力参与由网友发起的骏业街游乐场“和你Lunch”活动，要求政府回应“五大诉求”的同时，还要“拯救理大，还我校园”，并要求警方解释11月18日的油麻地“人踩人”事件。对于区议会选举民主派所取得的成果，有市民指其中表达的一个信息，是大多数选民都选择站在民主公义的一方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 8:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680152.md#1" target="_blank">90后山东维权青年杨超“三退”故事</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680152.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910201839301973-150x120.jpg" align ="left"></a>“我生在这种国度遇到邪恶组织是我人生中最大的不幸，我要三退（退少先队）撇清跟它们的一切关系。”这是山东维权人士杨超在接受大纪元记者采访时对记者说的一句话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 2:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683545.md#1" target="_blank">香港二千校友联署促解封理大</a><br></h3>理工大学管理层昨日到校园，劝谕留守者离开。林郑月娥表示如果理大校方可劝谕留守者离开，警方的安全小组便不会进入校园，理大学生会署理会长胡国泓批评林郑将责任推给学校。另外，超过2千名理大校友联署，要求校方及警方尽快解封和重整校园。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 9:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680303.md#1" target="_blank">纳瓦罗：白宫在审议香港人权法案 再送川普</a><br></h3>上周，《香港人权与民主法案》顺利通过美国国会两院。美国贸易顾问彼得·纳瓦罗（Peter Navarro）表示，目前，白宫律师正在审查国会上周批准的香港法案，之后将提交总统川普（特朗普）进行签署。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278_5.md#1">下一页</a></h3></td></tr>
